--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,13 +1,5 @@
+
 /*-----------------------------------------------------------------------------------
-
-    Template Name: Sample - Corporate Business Bootstrap4 HTML5 Template
-    Template URI: site.com
-    Description: Sample - Corporate Business Bootstrap4 HTML5 Template
-    Author: MD THAHERIL ISLAM
-    Author URI: site.com
-    Version: 1.0
-
------------------------------------------------------------------------------------
 
     CSS INDEX
     ===================
@@ -180,7 +172,7 @@ p {
     padding-left: 0;
     padding-top: 20px; } }
 .section-title span {
-  color: #5f2dee;
+  color: #fff;
   font-size: 16px;
   font-weight: 600;
   position: relative;
@@ -192,7 +184,7 @@ p {
     top: 50%;
     transform: translateY(-50%);
     height: 2px;
-    background: #5f2dee;
+    background: #fff;
     width: 16px; }
 .section-title .title {
   font-size: 45px;
@@ -1913,7 +1905,7 @@ p {
       position: absolute;
       top: 240px;
       left: 340px;
-      background: #b882fc;
+      background: #000;
       padding: 24px 40px; }
       @media only screen and (min-width: 992px) and (max-width: 1200px) {
         .modularize-about-area .modularize-about-thumb .about-box {
@@ -2022,7 +2014,7 @@ p {
       margin-top: 20px; } }
   .modularize-about-content span {
     font-size: 16px;
-    color: #5f2dee;
+    color: #000;
     padding-left: 28px;
     position: relative;
     font-weight: 600; }
@@ -2033,7 +2025,7 @@ p {
       bottom: 8px;
       height: 2px;
       width: 16px;
-      background: #5f2dee; }
+      background: #000; }
   .modularize-about-content > .title {
     font-size: 45px;
     font-weight: 800;
@@ -2088,7 +2080,7 @@ p {
       color: #000;
       line-height: 38px; }
       .modularize-about-content ul li i {
-        color: #b882fc;
+        /* color: #b882fc; */
         padding-right: 9px; }
   .modularize-about-content > a {
     border: 1px solid #5f2dee; }
@@ -2334,9 +2326,9 @@ p {
       .single-modularize-serice-item .content .title a {
         color: #404040; }
         .single-modularize-serice-item .content .title a:hover {
-          color: #5f2dee; }
+          color: #000; }
     .single-modularize-serice-item .content .icon {
-      background: #5f2dee;
+      background: #000;
       height: 70px;
       width: 70px;
       text-align: center;
@@ -2607,7 +2599,7 @@ p {
     6.FEATURE css 
 ===========================*/
 .modularize-feature-area {
-  background: #1d1729;
+  background: #000;
   padding-top: 180px;
   padding-bottom: 120px;
   position: relative;
@@ -2635,7 +2627,7 @@ p {
     z-index: -1; }
 
 .single-modularize-feature-item {
-  background: #000;
+  background: #353839;
   text-align: center;
   margin-top: 90px;
   transition: all linear 0.3s; }
@@ -2648,7 +2640,7 @@ p {
     margin-top: -60px;
     position: relative;
     z-index: 10;
-    background: #15101e;
+    background: #343434;
     border-radius: 50%;
     transition: all linear 0.3s; }
     .single-modularize-feature-item .icon svg path {
@@ -2705,9 +2697,9 @@ p {
     top: 0;
     height: 100%;
     width: 100%;
-    background-image: -moz-linear-gradient(180deg, #b882fc 0%, #5f2dee 100%);
-    background-image: -webkit-linear-gradient(180deg, #b882fc 0%, #5f2dee 100%);
-    background-image: -ms-linear-gradient(180deg, #b882fc 0%, #5f2dee 100%);
+    background-image: -moz-linear-gradient(180deg, #343434 0%, #000 100%);
+    background-image: -webkit-linear-gradient(180deg, #343434 0%, #000 100%);
+    background-image: -ms-linear-gradient(180deg, #343434 0%, #000 100%);
     opacity: 0.85;
     z-index: -1; }
   .modularize-cta-box .cta-content .title {
@@ -2920,9 +2912,9 @@ p {
       top: 0;
       height: 100%;
       width: 100%;
-      background-image: -moz-linear-gradient(90deg, #b882fc 0%, rgba(184, 130, 252, 0) 65%);
-      background-image: -webkit-linear-gradient(90deg, #b882fc 0%, rgba(184, 130, 252, 0) 65%);
-      background-image: -ms-linear-gradient(90deg, #b882fc 0%, rgba(184, 130, 252, 0) 65%);
+      background-image: -moz-linear-gradient(90deg, #343434 0%, rgba(184, 130, 252, 0) 65%);
+      background-image: -webkit-linear-gradient(90deg, #343434 0%, rgba(184, 130, 252, 0) 65%);
+      background-image: -ms-linear-gradient(90deg, #343434 0%, rgba(184, 130, 252, 0) 65%);
       z-index: -1;
       opacity: 0;
       transition: all linear 0.3s; }
@@ -2934,10 +2926,10 @@ p {
         .single-project-item .single-project-overlay .title {
           font-size: 20px; } }
     .single-project-item .single-project-overlay span {
-      color: #000;
+      color: #6c6a72;
       font-weight: 800;
       font-size: 14px;
-      color: #b882fc;
+      /* color: #b882fc; */
       text-transform: uppercase;
       transition: all linear 0.3s; }
     .single-project-item .single-project-overlay a {
@@ -4809,7 +4801,7 @@ p {
       bottom: 0;
       height: 2px;
       width: 17px;
-      background: #5f2dee; }
+      background: #fff; }
       @media (max-width: 767px) {
         .modularize-footer-area .title::before {
           left: 50%;
@@ -4819,7 +4811,7 @@ p {
   .footer-about {
     text-align: center; } }
 .footer-about > a {
-  max-width: 165px; }
+  max-width: 240px; }
 .footer-about p {
   color: #b0a9c0;
   line-height: 30px;
@@ -4836,12 +4828,13 @@ p {
     width: 45px;
     text-align: center;
     line-height: 48px;
-    background: #15101e;
+    background: #000;
     border-radius: 50%;
     color: #aea8b9;
     font-size: 18px; }
     .footer-about ul li a:hover {
-      background: #5f2dee; }
+      background: #fff;
+    color: #000; }
 
 @media (max-width: 767px) {
   .footer-nav {
@@ -4852,7 +4845,7 @@ p {
   font-size: 16px;
   line-height: 34px; }
   .footer-nav ul li a:hover {
-    color: #5f2dee; }
+    color: #fff; }
 
 .footer-newsletter {
   margin-right: 90px; }
@@ -4895,7 +4888,7 @@ p {
       border: 0;
       color: #fff;
       font-size: 18px;
-      background: #5f2dee; }
+      background: #000; }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .footer-info {
@@ -4906,7 +4899,9 @@ p {
     text-align: center; } }
 .footer-info ul li {
   display: flex;
-  align-items: flex-start;
+  /* align-items: flex-start; */
+  align-items: center;
+  
   gap: 13px;
   color: #b0a9c0;
   margin-bottom: 10px; }
@@ -4916,16 +4911,16 @@ p {
   .footer-info ul li i {
     color: #000;
     font-size: 14px;
-    color: #b882fc; }
+    color: #fff }
 
 .footer-copyright {
-  background: #15101e;
+  background: #000;
   border-top: 1px solid #322d3d;
   padding: 30px 0; }
   .footer-copyright p {
     color: #b0a9c0; }
     .footer-copyright p a {
-      color: #b882fc; }
+      color: #fff; }
 
 /*===== Go Top =====*/
 .go-top-area {
