--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3297,7 +3297,7 @@ p {
   text-align: center;
   line-height: 70px;
   position: absolute;
-  right: 0;
+  left: 0;
   bottom: 100%;
 }
 
@@ -3658,7 +3658,7 @@ p {
   top: 0;
   height: 100%;
   width: 100%;
-  background-image: url(../images/dot-bg.png);
+  /* background-image: url(../images/dot-bg.png); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -6690,7 +6690,7 @@ single-tema-item .content .share-icon > a {
   width: 45px;
   text-align: center;
   line-height: 48px;
-  background: #000;
+  background: #343434;
   border-radius: 50%;
   color: #aea8b9;
   font-size: 18px;
@@ -8126,17 +8126,18 @@ single-tema-item .content .share-icon > a {
   gap: 80px;
   margin: 0;
 }
+
 @media (max-width: 767px) {
   .modularize-company-about-area .modularize-about-content ul {
     display: block;
   }
 }
 .modularize-company-about-area .modularize-about-content ul li {
-  font-size: 18px;
+  font-size: 13px;
   font-weight: 700;
 }
 .modularize-company-about-area .modularize-about-content ul li i {
-  font-size: 20px;
+  font-size: 13px;
 }
 .modularize-company-about-area .modularize-about-content a {
   margin-top: 35px;
@@ -9390,6 +9391,15 @@ single-tema-item .content .share-icon > a {
   gap: 90px;
 }
 
+@media (max-width: 767px) {
+  .modularize-carrier-item {
+    flex-direction: column;
+    gap: 45px;
+  }
+}
+
+
+
 .modularize-carrier-job-card {
   width: 90%;
   margin: 0 auto;
@@ -9398,16 +9408,66 @@ single-tema-item .content .share-icon > a {
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 1) 0px 6px 9px, rgba(0, 0, 0, 2) 0px 6px 9px;
 }
-.modularize-carrier-job-card .modularize-carrier-item .modularize-job-apply {
-  padding: 15px 30px;
-  background-color: #fff;
-  color: #000;
-}
+
 
 .modularize-carrier-job-card .modularize-carrier-item .modularize-job-apply {
   display: flex;
   gap: 10px;
   align-items: center;
+  padding: 15px 30px;
+  background-color: #fff;
+  color: #000;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .modularize-carrier-item {
+    gap: 30px;
+  }
+  .modularize-carrier-item div {
+    font-size: 10px;
+  }
+  .modularize-carrier-job-card .modularize-carrier-item .modularize-job-location p {
+    font-size: 10px;
+  }
+  .modularize-carrier-job-card .modularize-carrier-item .modularize-job-timing p {
+    font-size: 10px;
+  }
+  .modularize-carrier-job-card .modularize-carrier-item .modularize-job-apply {
+    padding: 5px 15px;
+  }
+}
+@media only screen and (min-width: 991px) and (max-width: 1115px){
+  .modularize-carrier-item {
+    gap: 70px;
+  }
+  .modularize-carrier-item div {
+    font-size: 10px;
+  }
+  .modularize-carrier-job-card .modularize-carrier-item .modularize-job-location p {
+    font-size: 10px;
+  }
+  .modularize-carrier-job-card .modularize-carrier-item .modularize-job-timing p {
+    font-size: 10px;
+  }
+  .modularize-carrier-job-card .modularize-carrier-item .modularize-job-apply {
+    padding: 7px 20px;
+  }
+}
+@media only screen and (min-width: 1115px) and (max-width: 1400px){
+  .modularize-carrier-item {
+    gap: 80px;
+  }
+  .modularize-carrier-item div {
+    font-size: 15px;
+  }
+  .modularize-carrier-job-card .modularize-carrier-item .modularize-job-location p {
+    font-size: 15px;
+  }
+  .modularize-carrier-job-card .modularize-carrier-item .modularize-job-timing p {
+    font-size: 15px;
+  }
+  .modularize-carrier-job-card .modularize-carrier-item .modularize-job-apply {
+    padding: 10px 20px;
+  }
 }
 
 .modularize-carrier-job-card .modularize-carrier-item .modularize-job-apply a {
@@ -9429,6 +9489,14 @@ single-tema-item .content .share-icon > a {
 
 .modularize-carrier-job-card > div {
   color : white
+}
+
+.modularize-loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ width: 100%;
+ height: 100vh;
 }
 
 
