--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9768,6 +9768,13 @@ h4 {
   }
 }
 
+.modularize-technologies-area .technologies-justify-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 
 
 
