--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2954,7 +2954,6 @@ p {
   padding-right: 9px;
 }
 
-
 .modularize-about-3-area {
   padding-bottom: 120px;
   overflow: hidden;
@@ -3500,8 +3499,6 @@ p {
   margin-left: 15px;
   margin-right: 15px;
 }
-
-
 
 .single-service-5-item {
   position: relative;
@@ -4193,7 +4190,7 @@ p {
 }
 .modularize-sponser-area .modularize-sponser-item {
   text-align: center;
-  padding: 35px 0;  
+  padding: 35px 0;
   background-color: #fff;
 }
 .modularize-sponser-area .modularize-sponser-item img {
@@ -9313,9 +9310,8 @@ single-tema-item .content .share-icon > a {
   background-position: center;
   background-repeat: no-repeat;
   margin-top: 115px;
-  padding-bottom: 80px;    
+  padding-bottom: 80px;
 }
-
 
 @media (max-width: 767px) {
   .modularize-sponser-area .modularize-clients > span {
@@ -9746,7 +9742,8 @@ h4 {
   color: #fff;
 }
 
-.modularize-technologies-area .section-title span::before ,.modularize-feature-new .section-title span::before {
+.modularize-technologies-area .section-title span::before,
+.modularize-feature-new .section-title span::before {
   position: absolute;
   content: "";
   left: 0;
@@ -9758,12 +9755,13 @@ h4 {
 }
 
 @media (max-width: 767px) {
-  .modularize-technologies-area .icon-techno,.modularize-technologies-area .techno-content{
+  .modularize-technologies-area .icon-techno,
+  .modularize-technologies-area .techno-content {
     text-align: center;
   }
 }
 @media (max-width: 767px) {
-  .modularize-technologies-area{
+  .modularize-technologies-area {
     padding: 10px;
   }
 }
@@ -9775,37 +9773,223 @@ h4 {
   justify-content: center;
 }
 
-
 .modularize-certifications-area .section-title p {
-  color: #6c6a72
+  color: #6c6a72;
 }
 
 /* certifications */
 
-
-.modularize-certifications-area .certifications-justify-center .certification-image-1 {
+.modularize-certifications-area
+  .certifications-justify-center
+  .certification-image-1 {
   width: 85%;
   overflow: hidden;
 }
-.modularize-certifications-area .certifications-justify-center .certification-image-1 img {
+.modularize-certifications-area
+  .certifications-justify-center
+  .certification-image-1
+  img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
 @media (max-width: 767px) {
-  .modularize-certifications-area .certifications-justify-center{
+  .modularize-certifications-area .certifications-justify-center {
     text-align: center;
   }
-  .modularize-certifications-area .certifications-justify-center .certification-image-1 {
+  .modularize-certifications-area
+    .certifications-justify-center
+    .certification-image-1 {
     width: 100%;
   }
 }
 
+/* custom scrollbar */
 
+#style-4::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+#style-4::-webkit-scrollbar {
+  width: 7px;
+  background-color: #f5f5f5;
+}
+#style-4::-webkit-scrollbar-thumb {
+  background-color: #232323;
+  border: 2px solid #232323;
+}
 
+/* SDLC  */
 
+.modularize-sdlc-area {
+  background-image: url("../../assets/images/sdlc-black-bg.png");
+  padding: 80px;
+}
 
+.main-timeline:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.main-timeline .timeline {
+  width: 50%;
+  padding: 25px 80px 0 0;
+  margin: 0 5px 0 0;
+  float: left;
+}
+.main-timeline .timeline-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 40px;
+  box-shadow: 2px 3px 2px 2px rgb(250 250 250 / 20%);
+  display: block;
+  position: relative;
+}
+.main-timeline .timeline-content:hover {
+  text-decoration: none;
+}
+.main-timeline .timeline-icon {
+  color: #6c6a72;
+  background-color: #fff;
+  font-size: 40px;
+  text-align: center;
+  line-height: 110px;
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-50%);
+  position: absolute;
+  right: -135px;
+  top: 50%;
+}
+.main-timeline .timeline-icon:before {
+  content: "";
+  height: 60%;
+  border-radius: 50% 50% 0 0/100% 100% 0 0;
+  border: 2px solid #6c6a72;
+  border-bottom: none;
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  right: -10px;
+}
+.main-timeline .title {
+  color: #343434;
+  font-size: 22px;
+  /* font-weight: 700; */
+  text-transform: capitalize;
+  margin: 0 0 7px;
+}
+.main-timeline .description {
+  color: #6c6a72;
+  margin: 0;
+}
+.main-timeline .timeline:nth-child(even) {
+  padding: 25px 0 0 80px;
+  margin: 0 0 0 5px;
+  float: right;
+}
+.main-timeline .timeline:nth-child(even) .timeline-icon {
+  right: auto;
+  left: -135px;
+}
+.main-timeline .timeline:nth-child(4n + 2) .timeline-icon,
+.main-timeline .timeline:nth-child(4n + 2) .timeline-icon:before {
+  color: #6c6a72;
+  border-color: #6c6a72;
+}
+
+.main-timeline .timeline:nth-child(4n + 2) .title {
+  color: "343434";
+}
+.main-timeline .timeline:nth-child(4n + 3) .timeline-icon,
+.main-timeline .timeline:nth-child(4n + 3) .timeline-icon:before {
+  color: #6c6a72;
+  border-color: #6c6a72;
+}
+.main-timeline .timeline:nth-child(4n + 3) .title {
+  color: #343434;
+}
+.main-timeline .timeline:nth-child(4n + 4) .timeline-icon,
+.main-timeline .timeline:nth-child(4n + 4) .timeline-icon:before {
+  color: #6c6a72;
+  border-color: #6c6a72;
+}
+.main-timeline .timeline:nth-child(4n + 4) .title {
+  color: #343434;
+}
+@media screen and (max-width: 767px) {
+  .main-timeline .timeline,
+  .main-timeline .timeline:nth-child(even) {
+    width: 100%;
+    padding: 0 0 0 140px;
+    margin: 0 0 30px;
+  }
+  .main-timeline .timeline-icon,
+  .main-timeline .timeline:nth-child(even) .timeline-icon {
+    left: -130px;
+    right: auto;
+  }
+}
+@media screen and (max-width: 479px) {
+  .main-timeline .timeline,
+  .main-timeline .timeline:nth-child(even) {
+    padding: 140px 0 0;
+  }
+  .main-timeline .timeline-content {
+    text-align: center;
+  }
+  .main-timeline .timeline-icon,
+  .main-timeline .timeline:nth-child(even) .timeline-icon {
+    transform: translateY(0) translateX(-50%);
+    top: -130px;
+    left: 50%;
+  }
+}
+
+.modularize-sdlc-area .section-title span,
+.modularize-sdlc-area .section-title h3 {
+  color: #fff;
+}
+.modularize-sdlc-area .section-title span::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 2px;
+  background: #fff;
+  width: 16px;
+}
+
+/* Get in Touch */
+
+.modularize-get-in-touch-area .section-title p {
+  color: #6c6a72;
+}
+
+.modularize-get-in-touch-area {
+  background-image: url("../../assets/images/sdlc-black-bg.png");
+  padding: 80px;
+}
+
+.modularize-get-in-touch-area .section-title span,
+.modularize-get-in-touch-area .section-title h4 {
+  color: #fff;
+}
+
+.modularize-get-in-touch-area .section-title span::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 2px;
+  background: #fff;
+  width: 16px;
+}
 
 /* .modularize-technologies-area .techno-content {
   text-align: left;
