--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -271,7 +271,8 @@ p {
   background: #000;
   width: 16px;
 }
-.modularize-feature-area .section-title span {
+.modularize-feature-area .section-title span,
+.modularize-feature-new .section-title p {
   color: #fff;
 }
 .section-title .title {
@@ -319,7 +320,7 @@ p {
   z-index: 99;
 }
 .modularize-header-area .templates-logo {
-  background: #ffffff;
+  /* background: #ffffff; */
   padding: 39px 80px;
   height: 100%;
 }
@@ -331,7 +332,7 @@ p {
   }
 }
 .modularize-header-area .templates-logo img {
-  max-width: 230px;
+  max-width: 240px;
 }
 .modularize-header-area .header-wrapper {
   display: flex;
@@ -2639,6 +2640,7 @@ p {
 }
 .breadcrumb-item nav ol li + .breadcrumb-item::before {
   color: #fff;
+  padding-right: 0;
 }
 
 /*===========================
@@ -3099,7 +3101,7 @@ p {
 }
 .modularize-about-3-area .about-3-content .main-btn {
   margin-top: 20px;
-  border: 1px solid #5f2dee;
+  /* border: 1px solid #5f2dee; */
 }
 
 .modularize-about-4-area {
@@ -3123,9 +3125,9 @@ p {
   }
 }
 
-.about-thumb-4 {
+/* .about-thumb-4 {
   margin-left: -50px;
-}
+} */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .about-thumb-content {
@@ -8115,7 +8117,7 @@ single-tema-item .content .share-icon > a {
   margin-bottom: 27px;
 }
 .modularize-company-about-area .modularize-about-content ul {
-  display: flex;
+  /* display: flex; */
   justify-content: flex-start;
   gap: 80px;
   margin: 0;
@@ -9327,6 +9329,21 @@ single-tema-item .content .share-icon > a {
   padding-top: 80px;
 }
 
+.modularize-sponser-area .section-title span,
+.modularize-sponser-area .section-title h3 {
+  color: #fff;
+}
+.modularize-valuable-clients .section-title span::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 2px;
+  background: #fff;
+  width: 16px;
+}
+
 /* .container{
   padding:40px;
 } */
@@ -9600,6 +9617,19 @@ single-tema-item .content .share-icon > a {
   }
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1600px) {
+  .modularize-career-area-environment .career-environment-thumb img {
+    width: 400px;
+    height: 100%
+  }
+}
+@media only screen and (min-width: 1280px) and (max-width: 1600px) {
+  .modularize-career-area-environment .career-environment-thumb img {
+    width: 100%;
+    height: 100%
+  }
+}
+
 /* checking */
 
 :root {
@@ -9682,16 +9712,16 @@ h1:last-of-type {
 }
 
 .cyan-career {
-  border-top: 3px solid var(--cyan);
+  border-top: 3px solid #323232;
 }
 .red-career {
-  border-top: 3px solid var(--red);
+  border-top: 3px solid #323232;
 }
 .blue-career {
-  border-top: 3px solid var(--blue);
+  border-top: 3px solid #323232;
 }
 .orange-career {
-  border-top: 3px solid var(--orange);
+  border-top: 3px solid #323232;
 }
 
 h4 {
@@ -9823,7 +9853,7 @@ h4 {
 /* SDLC  */
 
 .modularize-sdlc-area {
-  background-image: url("../../assets/images/sdlc-black-bg.png");
+  background-image: url("../../assets/images/sdlc-black-bg.jpg");
   padding: 80px;
 }
 
@@ -9971,12 +10001,13 @@ h4 {
 }
 
 .modularize-get-in-touch-area {
-  background-image: url("../../assets/images/sdlc-black-bg.png");
+  background-image: url("../../assets/images/sdlc-black-bg.jpg");
   padding: 80px;
 }
 
 .modularize-get-in-touch-area .section-title span,
-.modularize-get-in-touch-area .section-title h4 {
+.modularize-get-in-touch-area .section-title h4,
+.modularize-get-in-touch-area .section-title p {
   color: #fff;
 }
 
@@ -9991,6 +10022,85 @@ h4 {
   width: 16px;
 }
 
-/* .modularize-technologies-area .techno-content {
-  text-align: left;
-} */
+/* about us team review */
+
+
+
+.innerdiv {
+  padding: 20px;
+}
+
+
+
+.eachdiv {
+  padding: 3rem 2rem;
+  border-radius: 0.8rem;
+  box-shadow: 5px 5px 20px #6d6b6b6b;
+  color: white;
+}
+
+.div5 {
+  background: #000;
+}
+.userdetails {
+  display: flex;
+}
+.imgbox {
+  margin-right: 1rem;
+}
+.imgbox img {
+  border-radius: 50%;
+  width: 2rem;
+  border: 2px solid #cec5c5;
+}
+.detbox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.detbox p {
+  margin: 0;
+}
+.detbox .name {
+  color: hsl(0, 0%, 81%);
+  font-size: 0.9rem;
+  margin-bottom: 0.1rem;
+  font-weight: 600;
+}
+.detbox .name.dark {
+  color: #49505a;
+}
+.detbox .designation {
+  color: hsl(0, 0%, 81%);
+  opacity: 50%;
+  font-size: 0.8rem;
+}
+.detbox .designation.dark {
+  color: #49505a;
+}
+.review h4 {
+  font-size: 1.4rem;
+  color: #f3deff;
+  font-weight: 600;
+  line-height: 1.5;
+  margin-bottom: 0.8rem;
+}
+.review.dark h4 {
+  color: #4b5258;
+}
+.review p {
+  font-size: 0.95rem;
+  color: #f3deff;
+  font-weight: 500;
+  opacity: 50%;
+  line-height: 1.5;
+}
+.review.dark p {
+  color: #0e0e0e;
+}
+
+.modularize-company-history .modularize-company-history-paragraphs .para-1 span {
+  font-size: 20px;
+  font-weight: 600;
+  color: #323232;
+}
